update GetPrices rpc spec
